Sh regnskab done

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <hr>
     <div class="headerimg">
-        <img src="images/Headerimg.PNG" alt="Banner billede af SH Regnskabs ansatte">
+        <img src="images/gruppebillede-billede-til-højre-2.png" alt="Banner billede af SH Regnskabs ansatte">
     </div>
 
     <div class="overskrifter text-center m-5 ">
