--- a/information.html
+++ b/information.html
@@ -27,99 +27,68 @@
 
         <hr>
         <div class="headerimg">
-            <img src="images/Headerimg.PNG" alt="Banner billede af SH Regnskabs ansatte">
+            <img src="images/gruppebillede-billede-til-højre-2.png" alt="Banner billede af SH Regnskabs ansatte">
         </div>
 
         <div class="row">
 
-            <div class=" col-12 col-md-4 offset-md-2 col-lg-2 offset-lg-3">
+            <div class="mt-5 mb-5 col-12 col-md-4 col-lg-4">
                 <div class="card text-center">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">Det næste skridt</h5>
+                        <p class="card-text text-left">Er det økonomiske fundament lagt, er der mulighed for at bygge videre. Et godt og trygt økonomisk fundament giver mulighed for at se hvilke næste skridt din virksomhed skal ta’.</p>
                     </div>
                 </div>
             </div>
 
-            <div class=" col-12 col-md-4 col-lg-2">
+            <div class="mt-5 mb-5 col-12 col-md-4 col-lg-4">
                 <div class="card text-center">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">Vi hjælper med din
+                            Virksomheds Drømme</h5>
+                        <p class="card-text text-left">Vi gør det muligt for dig at drømme om din virksomheds retning, og giver også solidt økonomisk fundament at bygge drømmene på. Vi mener struktur og planlægning giver dynamik </p>
                     </div>
                 </div>
             </div>
 
-            <div class=" col-12 offset-md-2 col-md-4 col-lg-2 offset-lg-0">
+            <div class="mt-5 mb-5 col-12 col-md-4 col-lg-4">
                 <div class="card text-center">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">Dine tidsfrister er vigtige</h5>
+                        <p class="card-text text-left">Hos SH Regnskab sætter vi en ære i at overholde dine tidsfrister. Det gælder både de interne tidsfrister og tidsfristerne  for dine leverandører, debitorer, kreditorer og det offentlige.</p>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class=" col-12 col-md-4 col-lg-2 offset-lg-3">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class=" col-12 col-md-4 offset-md-2 col-lg-2 offset-lg-0">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class=" col-12 col-md-4 col-lg-2">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
-            </div>
-            </div>
 
         <div class="row">
             <div class="offset-md-3 col-md-6 col-lg-4 offset-lg-0">
-                <div class="card m-3 text-center tilbud">
+                <div class="card m-3 text-center tilbud" style="min-height: 300px;">
                     <div class="card-body">
-                        <h5 class="card-title text-light">Card title</h5>
-                        <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title text-light">Vi sidder hos dig, fast timeantal</h5>
+                        <p class="card-text text-light text-left">Alt fra to gange om ugen, en halv dag om måneden og alt derimellem.</p>
+                        <p class="card-text text-light text-left">Denne løsning fungerer godt til dig, som har den samme mængde opgaver hele året rundt.</p>
                     </div>
                 </div>
             </div>
 
             <div class="offset-md-2 col-md-4 col-lg-4 offset-lg-0">
-                <div class="card m-3 text-center tilbud">
+                <div class="card m-3 text-center tilbud" style="min-height: 300px;">
                     <div class="card-body">
-                        <h5 class="card-title text-light">Card title</h5>
-                        <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title text-light">Vi sidder hos dig, varieret timeantal</h5>
+                        <p class="card-text text-light text-left">Her kan timetallet variere alt efter dine behov. </p>
+                        <p class="card-text text-light text-left">Denne løsning er især god til dig som har sæson i din forretning. </p>
                     </div>
                 </div>
             </div>
 
-            <div class="col-md-4 col-lg-4">
-                <div class="card m-3 text-center tilbud">
+            <div class="col-md-4 col-lg-4 h-25">
+                <div class="card m-3 text-center tilbud" style="min-height: 300px;">
                     <div class="card-body">
-                        <h5 class="card-title text-light">Card title</h5>
-                        <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <p class="card-text text-light">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title text-light">Vi afstemmer dine bilag og regnskab en bestemt dag</h5>
+                        <p class="card-text text-light text-left">Det kan være ugentligt eller månedligt, og fungerer fint til dig der håndterer dit regnskab elektronisk</p>
+                        <p class="card-text text-light text-left">Vi sidder på vores konto og sikrer at alt er klart op opdatere den dag du har brug for det. </p>
                     </div>
                 </div>
             </div>
