--- a/kontakt.html
+++ b/kontakt.html
@@ -29,7 +29,7 @@
 
     <hr>
     <div class="headerimg">
-        <img src="images/Headerimg.PNG" alt="Banner billede af SH Regnskabs ansatte">
+        <img src="images/gruppebillede-billede-til-højre-2.png" alt="Banner billede af SH Regnskabs ansatte">
     </div>
 
     <h5 class="d-flex justify-content-center mt-3" id="headerText">
@@ -40,11 +40,11 @@
     <!-- person 1 -->
     <div>
         <div id="kontaktContainer">
-            <img id="kontaktIMG" src="images/Susanne.png">
+            <img id="kontaktIMG" src="images/billede-2-klippet.png">
         </div>
         <div id="textHandler" class="mt-3">
             <p id="kontakt" class="col-8">
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                Arbejdet i 8 år som revisor hos PWC Trives med at skabe overblik i din økonomi stærk i årsafslutninger
             </p>
         </div>
         <div id="icons">
@@ -57,11 +57,15 @@
 
     <div>
         <div id="kontaktContainer">
-            <img id="kontaktIMG" src="images/Kristina.png">
+            <img id="kontaktIMG" src="images/billede-4-klippet.png">
         </div>
         <div id="textHandler" class="mt-3">
             <p id="kontakt" class="col-8">
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                Leder af SH Regnskab.
+                Uddannet i revisionsbranchen.
+                Arbejdet med bogholderi i 25 år.
+                Kendskab til flere brancher.
+
             </p>
         </div>
         <div id="icons">
@@ -74,11 +78,13 @@
 
     <div>
         <div id="kontaktContainer">
-            <img id="kontaktIMG" src="images/Susanne.png">
+            <img id="kontaktIMG" src="images/billede-3-klippet.png">
         </div>
         <div id="textHandler" class="mt-3">
             <p id="kontakt" class="col-8">
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                25 års erfaring med kontor og regnskab.
+                Trives med orden og styr på deadlines.
+                Skarp på daglig bogføring.
             </p>
         </div>
         <div id="icons">
@@ -101,7 +107,7 @@
         </h5>
     </div>
     </div>
-    <footer class="footer bg-dark d-flex flex-wrap row justify-content-center align-middle mt-2 pb-3 pt-4">
+    <footer class="footer bg-dark d-flex flex-wrap row justify-content-center align-middle mt-2 pb-3 pt-4 ">
         <section class="footer__some flex-nowrap row mx-5">
             <a href="https://facebook.com/" target="_blank" class="footer__some__icon mx-2 mb-2"><i class="fab fa-2x fa-facebook-square" aria-label="Facebook icon"></i></a>
             <a href="https://linkedin.com/" target="_blank" class="footer__some__icon mx-2 mb-2"><i class="fab fa-2x fa-linkedin" aria-label="LinkedIn icon"></i></a>
