Navne added på kontakt

--- a/kontakt.html
+++ b/kontakt.html
@@ -42,6 +42,7 @@
         <div id="kontaktContainer">
             <img id="kontaktIMG" src="images/billede-2-klippet.png">
         </div>
+        <h4 class="text-center font-weight-bold">Kristina Nielsen</h4>
         <div id="textHandler" class="mt-3">
             <p id="kontakt" class="col-8">
                 Arbejdet i 8 år som revisor hos PWC Trives med at skabe overblik i din økonomi stærk i årsafslutninger
@@ -59,6 +60,7 @@
         <div id="kontaktContainer">
             <img id="kontaktIMG" src="images/billede-4-klippet.png">
         </div>
+        <h4 class="text-center font-weight-bold">Susanne Hansen</h4>
         <div id="textHandler" class="mt-3">
             <p id="kontakt" class="col-8">
                 Leder af SH Regnskab.
@@ -80,6 +82,7 @@
         <div id="kontaktContainer">
             <img id="kontaktIMG" src="images/billede-3-klippet.png">
         </div>
+        <h4 class="text-center font-weight-bold">Christina Dyja</h4>
         <div id="textHandler" class="mt-3">
             <p id="kontakt" class="col-8">
                 25 års erfaring med kontor og regnskab.
